# discord-assistant

./: .env.example  .gitignore  DESIGN.md  pyproject.toml  ruff.toml
config/: channels.yaml  schedule.yaml
docs/plans/: 2026-02-27-discord-assistant.md  2026-02-27-minimax-tool-call-sanitizer.md
scripts/: discord-assistant.service  healthcheck.sh  install.sh
src/: main.py  monitoring.py  settings.py  shutdown.py  soul.py  soul_editor.py
src/agent/: core.py  plan_executor.py  plan_parser.py  router.py  tool_loop.py
src/bot/: client.py  filters.py  formatters.py  progress.py
src/memory/: compaction.py  operational.py  self_review.py  store.py  vector.py
src/providers/: minimax.py
src/scheduler/: heartbeat.py  jobs.py
src/skills/: loader.py  registry.py
src/tools/: files.py  shell.py  skill_author.py  web.py  (+2 more)
tests/: test_agent_context.py  test_agent_core.py  test_agent_router.py  test_agent_tool_loop.py  test_bot_client.py  test_bot_client_integration.py  test_bot_filters.py  test_bot_formatters.py  test_heartbeat.py  test_integration.py  test_main.py  test_memory_compaction.py  test_memory_operational.py  test_memory_store.py  test_memory_vector.py  test_monitoring.py  test_plan_executor.py  test_providers_minimax.py  test_scheduler.py  test_self_review.py  test_settings.py  test_shutdown.py  test_skill_author.py  test_skill_dispatch.py  test_skills_loader.py  test_skills_registry.py  test_soul.py  test_soul_editor.py  test_subagent_base.py  test_subagents.py  test_tools_system.py  test_tools_web.py  test_web_safety.py
transcript/: transcription.txt
(+10 files in other folders)
